css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background-color: #dbdbd3;
}

ul {
    list-style: none;
    padding-left: 0rem;
}

li {
    cursor: pointer;
    border-top:1px solid #dedede ;
    padding: 10px;
}

li:hover{
    background-color: #b1b1b1;
}

i {
    padding: 0 5px;
}

.fa-bell-slash {
    padding: 0;
}

/* Nav Style */

nav {
    min-height: 150px;
    background-color: #009688;
}

/* MAIN BOX */
.mainBox {
    width: 80%;
    margin: 0 auto;
    height: 850px;
    position: absolute;
    top: 3%;
    left: 11%;
    display: flex;
}

/* ***************************** */
/* LEFT SIDE */

.leftSide {
    width: calc(100% / 3 * 1);
    height: 100%;
    background-color: #eaeaea;
}

.rightSide {
    width: calc(100% / 3 * 2);
    height: 100%;
    right: 0;
    /* background-color: #cfc8c1; */
    border-left: 1px solid rgb(214, 214, 214);
}

/* navUser */
.navUser {
    display: flex;
    width: 100%;
    background-color: #eaeaea;
    padding: 7px;
    justify-content: space-between;
}

.icons {
    display: flex;
    align-items: center;
}

.avatar {
    display: flex;
    align-items: center;
    width: 50px;
}

.avatar img {
    border-radius: 50%;
}

img {
    /* border-radius: 50%; */
    width: 100%;
}

.icons .icon {
    padding-left: 10px;
}

/* ACTIVE ALARM */
.activeAlarm {
    display: flex;
    padding: 10px;
    background-color: #8edafc;
    align-items: center;
    min-height: 70px;
}

.alarm {
    background-color: white;
    padding: 10px;
    border-radius: 50%;
}

.text {
    padding-left: 20px;
}

.subText {
    text-decoration: underline;
}

/* SEARCH SECTION */
.search {
    padding: 10px;
    display: flex;
}

.iconMagnif {
    background-color: white;
    padding: 5px;
    padding-right: 10%;
    padding-left: 5%;
}

.inputSearch {
    width: 85%;
    border: none;
    outline: none;

}


/* chatList */

.chatList {
    /* padding: 10px; */
}

.chat {
    display: flex;
}

.itemChatAvatar {
    flex-basis: 20%;
    border-radius: 50%;
}

.itemChatAvatar img {
    border-radius: 50%;
}

.itemChatText {
    flex-basis: 60%;
    padding: 10px;
}

.itemChatData {
    flex-basis: 20%;
    text-align: right;
}

.wrap {
    height: 658px;
    overflow-y: auto;
}



/* **************************
    RIGHT SIDE */
/* CONTACT CHAT */

.contact {
    display: flex;
    padding: 7px;
    background-color: #eaeaea;
}

.contactAvatar {
    display: flex;
    align-items: center;
    flex-basis: 90%;
}

.infoContact {
    padding-left: 10px;
}

.image {
    width: 50px;
}

.image img {
    border-radius: 50%;
}

.iconsContact {
    display: flex;
    align-items: center;
}


.iconsContact .iconContact {
    padding-left: 10px;
}

/* SFONDO */
.wallpaperChat {
    height: 736px;
    background-image: url("../img/bg_chat.png");
    background-size: cover;
    overflow-y: auto;
}

.textArea {
    width: 70%;
    margin: 0 auto;
    padding-top: 20px;
    min-height: 100px;
}

.row {
    width: 115%;
    margin: 10px 0;
}

.time {
    position: absolute;
    font-size: 0.6rem;
    bottom: 0;
    right: 5px;
    font-weight: lighter;
}

.arrowInfo {
    position: absolute;
    font-size: 0.6rem;
    top: 0;
    right: 0;
    font-weight: lighter;
    cursor: pointer;
}

.dropdown-toggle{
    border: none;
}

.messUser {
    background-color: #d5f9ba;
    width: 40%;
    min-height: 50px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    position: relative;

}

.messContact {
    background-color: white;
    width: 40%;
    min-height: 50px;
    border-radius: 10px;
    display: flex;
    align-items: center;
    position: relative;
}


/* textBar */


.textBar {
    min-height: 50px;
    background-color: #f3eeea;
    display: flex;
    align-items: center;
    padding: 5px;
}

.emoteIcon {
    width: 10%;
    text-align: center;

}

.inputTextUser {
    width: 80%;

}

.inputTextUser input {
    width: 100%;
    padding: 7px;
    border: none;
    border-radius: 5px;
    outline: none;
}

.microphoneIcon {
    width: 10%;
    text-align: center;
}

